# signed-pickle

./: README.md  setup.cfg
signed_pickle/: __init__.py
signed_pickle/tests/: tests.py
