[metadata]
name = signed-pickle-federicoemartinez
version = 0.0.1
author = Federico Martinez
author_email = federicoemartinez@gmail.com
description = Signed pickle to allow secure unpickling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/federicoemartinez/signed-pickle
project_urls =
    Bug Tracker = https://github.com/federicoemartinez/signed-pickle/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6
